l'ajout de la section bibliographie

--- a/style.css
+++ b/style.css
@@ -50,3 +50,9 @@ hr{
    background-color: #e5e5e5;
    border: none;
  }
+
+ #biblio{
+  background-color:#E3D559; 
+  padding: 25px; 
+  color: #353b48;
+ }
