--- a/style.css
+++ b/style.css
@@ -56,3 +56,35 @@ hr{
   padding: 25px; 
   color: #353b48;
  }
+
+ .blocimages {
+  background-color: #f9f9f9;
+  width: 100%;
+  height: 100%;
+  padding: 15px 15px;
+  border-top: 1px solid #ddd;
+  overflow-y: scroll;
+}
+
+.images {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-around;
+  flex-wrap: wrap;
+}
+
+.image {
+  width: 220px;
+  margin-bottom: 50px;
+}
+
+.imag {
+  width: 100%;
+  height: 170px;
+}
+
+.imag img {
+  object-fit: cover;
+  height: 94%;
+  width: 100%;
+}
