--- a/style.css
+++ b/style.css
@@ -3,19 +3,20 @@
   max-width: 800px; /* largeur maximale */
   margin: 0 auto; /* centrer le container */
   text-align: center;/* centrer le texte */
-
 }
 
-div.entete{
+nav.entete{
 background-color: #E3D559;
-overflow: auto;
 white-space: nowrap;
 width:100% ;
 padding-right: 40px;
 margin-bottom: 20px;
+overflow-x: auto;
+
+
 }
 
-div.entete a {
+nav.entete a {
   display: inline-block;
   color: white;
   text-align: center;
@@ -24,7 +25,7 @@ div.entete a {
   font-size: 20px;
 }
 
-div.entete a:hover {
+nav.entete a:hover {
   background-color: #777;
 }
 
@@ -63,38 +64,72 @@ hr{
   height: 100%;
   padding: 15px 15px;
   border-top: 1px solid #ddd;
-  overflow-y: scroll;
 }
 
-.images {
+.images {/* ce block de proprieté correspond a la disposition des images dans la section album */
   display: flex;
   flex-direction: row;
   justify-content: space-around;
-  flex-wrap: wrap;
+  flex-wrap: wrap;/* il contraint les elemnets à etre sur plusieurs lignes */
+
 }
 
 .image {
   width: 220px;
   margin-bottom: 50px;
 }
-
+    
 .imag {
   width: 100%;
   height: 170px;
 }
 
 .imag img {
-  object-fit: cover;
+  object-fit: cover; /* cette propriete definit comment l'image doit s'adapter a son contenu en se referant a sa largeur et sa hauteur */
   height: 94%;
   width: 100%;
-}
+  border: 3px #E3D559 dashed;
+  box-shadow: 5px 5px 0px #E3D559;
+  }
 
-.footer {
+footer {
   position: fixed;
+  display: inline-block;
   left: 0;
   bottom: 0;
   width: 100%;
   background-color: #E3D559;
   color: black;
   text-align: center;
+
 }
+
+article{
+  background-color: #ecf0f1;
+  padding: 20px;
+  font-size: 16px;
+  font-family: "Lucida Calligraphy", arial;
+}
+
+.imag img:hover{
+  transform: scale(1.5); /* transformation des images avec une taille de 1.5 au defilement du curseur */
+}
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+ 
+ 
